frontend/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: week1-frontend
  namespace: default
  labels:
    app: week1-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: week1-frontend
  template:
    metadata:
      labels:
        app: week1-frontend
    spec:
      containers:
      - name: frontend-container
        image: mindxtien2026.azurecr.io/week1-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
