frontend/kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: week1-frontend-service
spec:
  selector:
    app: week1-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
