frontend/kubernetes/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: week1-https-ingress
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - 135.171.234.236.nip.io
    secretName: week1-nip-tls
  rules:
  - host: 135.171.234.236.nip.io
    http:
      paths:  
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: week1-api-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: week1-frontend-service
            port:
              number: 80
